# 305.2-applied-cybersecurity

./: .env.example  .gitignore  README.md  add_hr_user.py  config.py  docker-compose.yaml  flake.nix  generate_job_offer_pdf_from_json.py  hr_chatbot.py  index.html  infomaniak-ai.nu  job_offer_template.typ  main.py  pyproject.toml
application/: .gitignore  README.md  chainlit.md  hr_chatbot.py  infomaniak-ai.nu  pyproject.toml
application/src/: application_matcher.py  cv_extractor.py  cv_veracity_checker.py  database.py  email_answer_generator.py  email_classifier.py  k_drive_tools.py  mail_client.py  orchestrator.py
bug_reports/: report_1.md
demos/: .gitignore  README.md  flake.nix  pyproject.toml
demos/src/: app.py  auth_session.py  config.py
docs/: euria_sysprompt_extraction.md  llm_vul_exploit.md
reports/: article.md  article_classic.html  findings_summary.md  malicious_payload_delivery.md  model_hijacking.md  path_traversal.md  report_3.md  report_4.md  report_5.md  system_prompt_retrieval.md
src/: application_matcher.py  classifier.py  config.py  cv_comparator.py  cv_extractor.py  cv_veracity_checker.py  database.py  email_answer_generator.py  email_classifier.py  k_drive_tools.py  mail_client.py  orchestrator.py
