[project]
name = "305-2-applied-cybersecurity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "ddgs>=9.13.1",
    "docling>=2.88.0",
    "dotenv>=0.9.9",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openrouter>=0.2.1",
    "pdfplumber>=0.11.9",
    "pymysql>=1.1.0",
    "requests>=2.31.0",
]
